<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >


    <item
        android:id="@+id/action_calendar1"
        android:title="@string/action_calendar1">
    </item>
    <item
        android:id="@+id/action_calendar2"
        android:title="@string/action_calendar2">
    </item>
    <item
        android:id="@+id/action_summary"
        android:title="@string/action_summary">
    </item>
    <item
        android:id="@+id/action_info"
        android:title="@string/action_info">

    </item>

    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom"/>
    <!-- android:icon="@drawable/baseline_refresh_white_18dp"-->

</menu>